--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ argfile = { version = "0.2.0" }
 clap = { version = "4.5.3", features = ["derive"] }
 colored = { version = "2.1.0" }
 log = { version = "0.4", features = ["kv_unstable", "kv_serde"] }
+once_cell = "1.19.0"
+path-absolutize = "3.1.1"
