--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,13 @@ edition = "2024"
 
 [workspace.dependencies]
 teamsearch_utils = { path = "crates/teamsearch_utils" }
+teamsearch_workspace = { path = "crates/teamsearch_workspace" }
 anyhow = { version = "1.0.80" }
 argfile = { version = "0.2.0" }
 clap = { version = "4.5.3", features = ["derive"] }
 colored = { version = "2.1.0" }
+derive_more = "0.99.18"
+itertools = "0.13.0"
 log = { version = "0.4", features = ["kv_unstable", "kv_serde"] }
 once_cell = "1.19.0"
 path-absolutize = "3.1.1"
