Add file resolver settings configurations

--- a/crates/teamsearch_workspace/Cargo.toml
+++ b/crates/teamsearch_workspace/Cargo.toml
@@ -11,4 +11,5 @@ teamsearch_utils = { workspace = true }
 
 anyhow = { workspace = true }
 derive_more = { workspace = true }
+globset = { workspace = true }
 log = { workspace = true }
