--- a/crates/teamsearch/Cargo.toml
+++ b/crates/teamsearch/Cargo.toml
@@ -14,5 +14,6 @@ anyhow = { workspace = true }
 argfile = { workspace = true }
 clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
 colored = { workspace = true }
+itertools = { workspace = true }
 log = { workspace = true }
 once_cell = { workspace = true }
