--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ colored = { version = "2.1.0" }
 crossbeam-channel = "0.5.1"
 derive_more = "0.99.18"
 globset = "0.4.14"
+grep-regex = "0.1.13"
+grep-searcher = "0.1.14"
+grep-printer = "0.2.2"
 ignore = "0.4.22"
 index_vec = "0.1.3"
 itertools = "0.13.0"
@@ -29,5 +32,6 @@ log = { version = "0.4", features = ["kv_unstable", "kv_serde"] }
 once_cell = "1.19.0"
 parking_lot = "0.12"
 path-absolutize = "3.1.1"
+termcolor = "1.4.1"
 thin-vec = "0.2.13"
 wild = { version = "2" }
