--- a/crates/teamsearch/Cargo.toml
+++ b/crates/teamsearch/Cargo.toml
@@ -14,6 +14,11 @@ anyhow = { workspace = true }
 argfile = { workspace = true }
 clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
 colored = { workspace = true }
+grep-regex = { workspace = true }
+grep-searcher = { workspace = true }
+grep-printer = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
 once_cell = { workspace = true }
+termcolor = { workspace = true }
+wild = { workspace = true}
