--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,15 @@ path-absolutize = "3.1.1"
 termcolor = "1.4.1"
 thin-vec = "0.2.13"
 wild = { version = "2" }
+
+[profile.release]
+opt-level = 3
+lto = "fat"
+debug-assertions = false
+overflow-checks = false
+
+# strip any symbols from the executable, this makes backtraces un-readable
+strip = false
+
+# set debug to true when profiling
+debug = false
