Simplify searching process
Avoid using `grep_searcher`, and instead purely look for matches via
the available `grep_matcher` API. This simplifies the searching process
and makes it possible to implement more flexible (and faster) match
reporting using `annotate-snippets`.

--- a/crates/teamsearch/Cargo.toml
+++ b/crates/teamsearch/Cargo.toml
@@ -15,10 +15,12 @@ argfile = { workspace = true }
 clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
 colored = { workspace = true }
 grep-regex = { workspace = true }
+grep-matcher = { workspace = true }
 grep-searcher = { workspace = true }
-grep-printer = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
 once_cell = { workspace = true }
 termcolor = { workspace = true }
 wild = { workspace = true}
+annotate-snippets = { workspace = true }
+derive_more = { workspace = true }
