--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ teamsearch_utils = { path = "crates/teamsearch_utils" }
 teamsearch_workspace = { path = "crates/teamsearch_workspace" }
 
 anyhow = { version = "1.0.80" }
+annotate-snippets = "0.11.5"
 argfile = { version = "0.2.0" }
 bitflags = { version = "2.5.0" }
 clap = { version = "4.5.3", features = ["derive"] }
@@ -23,8 +24,8 @@ crossbeam-channel = "0.5.1"
 derive_more = "0.99.18"
 globset = "0.4.14"
 grep-regex = "0.1.13"
+grep-matcher = "0.1.7"
 grep-searcher = "0.1.14"
-grep-printer = "0.2.2"
 ignore = "0.4.22"
 index_vec = "0.1.3"
 itertools = "0.13.0"
