Add `teamsearch_matcher` crate
This crate hosts all of the implementation for searching and matching
contents within a given run.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2024"
 
 
 [workspace.dependencies]
+teamsearch_matcher = { path = "crates/teamsearch_matcher" }
 teamsearch_utils = { path = "crates/teamsearch_utils" }
 teamsearch_workspace = { path = "crates/teamsearch_workspace" }
 
