--- a/crates/teamsearch/Cargo.toml
+++ b/crates/teamsearch/Cargo.toml
@@ -11,17 +11,14 @@ teamsearch_utils = { workspace = true }
 teamsearch_workspace = { workspace = true }
 teamsearch_matcher = { workspace = true }
 
+annotate-snippets = { workspace = true }
 anyhow = { workspace = true }
 argfile = { workspace = true }
 clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
 colored = { workspace = true }
-grep-regex = { workspace = true }
-grep-matcher = { workspace = true }
-grep-searcher = { workspace = true }
+derive_more = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
 once_cell = { workspace = true }
-termcolor = { workspace = true }
+rayon = { workspace = true }
 wild = { workspace = true}
-annotate-snippets = { workspace = true }
-derive_more = { workspace = true }
