Implement `json` output for `find` command

--- a/crates/teamsearch/Cargo.toml
+++ b/crates/teamsearch/Cargo.toml
@@ -22,3 +22,4 @@ log = { workspace = true }
 once_cell = { workspace = true }
 rayon = { workspace = true }
 wild = { workspace = true}
+serde_json = { workspace = true }
