--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ once_cell = "1.19.0"
 parking_lot = "0.12"
 path-absolutize = "3.1.1"
 rayon = "1.5.1"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = { version = "1.0.113" }
 thin-vec = "0.2.13"
 wild = { version = "2" }
 
