Strip debug information from release builds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ debug-assertions = false
 overflow-checks = false
 
 # strip any symbols from the executable, this makes backtraces un-readable
-strip = false
+strip = true
 
 # set debug to true when profiling
 debug = false
