Implement `json` format for `lookup` command
- Implement `json` format output for `lookup` command.

- Adjust some documentation wording for cli arguments and commands.

- Also, move result and printing to the parent of the `lookup`
function.

--- a/crates/teamsearch/Cargo.toml
+++ b/crates/teamsearch/Cargo.toml
@@ -20,4 +20,5 @@ log = { workspace = true }
 once_cell = { workspace = true }
 rayon = { workspace = true }
 wild = { workspace = true}
+serde = { workspace = true }
 serde_json = { workspace = true }
