--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ opt-level = 3
 lto = "fat"
 debug-assertions = false
 overflow-checks = false
+codegen-units = 1
 
 # strip any symbols from the executable, this makes backtraces un-readable
 strip = true
