Add serialization for `FileEntry`

--- a/crates/teamsearch_workspace/Cargo.toml
+++ b/crates/teamsearch_workspace/Cargo.toml
@@ -14,3 +14,4 @@ ignore = { workspace = true }
 index_vec = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
+serde = { workspace = true }
