--- a/crates/teamsearch_utils/Cargo.toml
+++ b/crates/teamsearch_utils/Cargo.toml
@@ -9,3 +9,4 @@ path-absolutize = { workspace = true}
 log = { workspace = true }
 once_cell = { workspace = true }
 clap = { workspace = true }
+rayon = { workspace = true }    
