--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ path-absolutize = "3.1.1"
 rayon = "1.5.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.113" }
+tempfile = "3.8"
 thin-vec = "0.2.13"
 wild = { version = "2" }
 
