--- a/crates/teamsearch_workspace/Cargo.toml
+++ b/crates/teamsearch_workspace/Cargo.toml
@@ -15,3 +15,7 @@ index_vec = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
 serde = { workspace = true }
+
+
+[dev-dependencies]
+tempfile = { workspace = true }
